src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Product</label>
        <referenceTo>Account_Product__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Amex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Credited__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Amount Credited</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Amount Due</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Amount Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Refunded__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Refunded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreditedEqualsPaid__c</fullName>
        <description>Check if the amount paid all paid by credit, used for invoice status change batch</description>
        <formula>IF(Amount_Credited__c= Amount_Paid__c, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreditedEqualsPaid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <formula>IF(AND(Due_Date__c &lt; Today(),OR(ISPICKVAL(Status__c ,&apos;AUTHORISED&apos;), ISPICKVAL(Status__c , &apos;PARTIALLY PAID&apos;))), TODAY() - Due_Date__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Batch</label>
        <referenceTo>Invoice_Batch__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Total__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Invoice Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Email_Sent__c</fullName>
        <label>Last Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PaidEqualsTotal__c</fullName>
        <formula>IF(Invoice_Total__c= Amount_Paid__c, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PaidEqualsTotal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Batch</label>
        <referenceTo>Invoice_Batch__c</referenceTo>
        <relationshipLabel>Invoices (Payment Batch)</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Message__c</fullName>
        <label>Payment Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Option__c</fullName>
        <label>Payment Option</label>
        <picklist>
            <picklistValues>
                <fullName>Eway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Buddy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commweb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Debit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Response__c</fullName>
        <label>Payment Response</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Message__c</fullName>
        <label>Process Message</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promo</label>
        <referenceTo>Promotions__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promocode</label>
        <referenceTo>Promocode__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefundEqualsTotal__c</fullName>
        <formula>IF(Amount_Refunded__c= Invoice_Total__c, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RefundEqualsTotal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_Task_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder Task Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Invoice_Number__c</fullName>
        <displayFormat>{000000000}</displayFormat>
        <label>Salesforce Invoice Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>AUTHORISED</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PAID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARTIALLY PAID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANCELLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REFUNDED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO CHARGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CREDITED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARTIALLY CREDITED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARTIALLY REFUNDED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAD DEBT/WRITTEN OFF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHARGEBACK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Xero_Contact_Id__c</fullName>
        <label>Xero Contact Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Invoice_Id__c</fullName>
        <label>Xero Invoice Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Issue_Date__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Invoice_Batch__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Payment_Message__c</columns>
        <columns>Payment_Response__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Support_View</fullName>
        <columns>NAME</columns>
        <columns>Issue_Date__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Invoice_Batch__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Payment_Message__c</columns>
        <columns>Payment_Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Number__c</field>
            <operation>contains</operation>
            <value>-</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>test</value>
        </filters>
        <label>Support View</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>Issue_Date__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Invoice_Batch__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Payment_Message__c</columns>
        <columns>Payment_Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Amount_Paid__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Today</label>
    </listViews>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>